# fastapi_sample

./: .env  .gitignore  Dockerfile  README.md  agent_test.py  ai.py  alembic.ini  docker-compose.yaml  llm_demo1.py  main.py  pyproject.toml
app/: __init__.py
app/agents/: bot_agent.py
app/core/: config.py  db.py  depends.py  socket_manager.py
app/models/: __init__.py  chat_model.py  user_model.py
app/routers/: chat_router.py  user_router.py
app/schemas/: agent_schema.py  user_schema.py
app/services/: chat_service.py  user_service.py
apps/user_service/: __init__.py  model.py  schemas.py  service.py
apps/user_service/api/: __init__.py  user_api.py
common/: config.py  db.py  depends.py  encoder.py  exceptions.py  jwt_utils.py  logging_config.py  passwd.py  scheme.py
frontend/fastapi_frontend/: pnpm-lock.yaml
frontend/fastapi_frontend/src/: App.tsx
frontend/fastapi_frontend/src/api/: index.ts
frontend/fastapi_frontend/src/router/: index.tsx
frontend/fastapi_frontend/src/service/: auth.ts
frontend_web/: .env  package.json
frontend_web/src/: .env  main.tsx
frontend_web/src/api/: request.ts
frontend_web/src/pages/home/: index.tsx
frontend_web/src/router/: index.tsx
frontend_web/src/service/: auth.ts  chat.ts
frontend_web/src/types/: chat.ts  meeting.ts  request.ts  user.ts
frontend_web/src/utils/: cache.ts
migrations/: env.py
migrations/versions/: 0c8e0469842d_数据库修改.py  1fb392417ca9_init.py  597ec40d007b_add_user_login_record.py  6302b5543861_增加账户.py  a69eb2597e7c_数据库修改.py  a8f4403243e6_增加头像.py  d53553d2efe6_增加base.py
(+4 files in other folders)
