[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.1",
    "langchain>=1.0.5",
    "langchain-deepseek>=1.0.0",
    "orjson>=3.11.4",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn>=0.38.0",
]
